fix(mobile nav menu): Fix cancel button sizing on mobile nave menu.

--- a/index.css
+++ b/index.css
@@ -40,10 +40,10 @@ body {
 
 	background-color: var(--Black);
 }
-img {
+/* img {
 	height: auto;
 	width: 100%;
-}
+} */
 
 /* HEADER */
 .header {
@@ -127,12 +127,17 @@ img {
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100svh;
+	height: 100vh;
 	z-index: 12;
 
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
+}
+@supports (height: 100svh) {
+	.mobile__menu {
+		height: 100svh;
+	}
 }
 .header__mobile__nav {
 	position: absolute;
